--- a/starbuzz/starbuzz.css
+++ b/starbuzz/starbuzz.css
@@ -5,11 +5,14 @@ body {
   margin:           0px;
 }
 
-#header {
+header {
   background-color: #675c47;
   margin:           10px 10px 0px 10px;
   height:           108px;
 
+}
+header img#headerslogan{
+  float: right;
 }
 
 #main {
@@ -22,24 +25,23 @@ body {
   vertical-align: top;
 }
 
-#sidebar {
+aside {
   display:table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 470px;
   vertical-align: top;
   
 }
 
-#footer {
+footer {
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
   padding:          15px;
   margin:           0px 10px 10px 10px;
   font-size:        90%;
-  clear: left;
+
 }
 
 h1 {
